--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
+encoding//public/css/style.css=UTF-8
 encoding//resources/views/speaker.blade.php=UTF-8
 encoding/<project>=UTF-8
