--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     	"laravel/framework": "5.2.*",
     	"laravelcollective/html": "5.2.*",
     	"twbs/bootstrap": "^3.3",
-        "illuminate/html": "^5.0",
+        "illuminate/html": "^5.0"
 	},
     "require-dev": {
         "fzaninotto/faker": "~1.4",
